--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
           <div class="body"></div>
           <div class="right arm"></div>
         </div>
+
+        <div class="player opponent">
+          <div class="left arm"></div>
+          <div class="body"></div>
+          <div class="right arm"></div>
+        </div>
       </div>
       <div id="two" class="screen">
         <div class="player">
+          <div class="left arm"></div>
+          <div class="body"></div>
+          <div class="right arm"></div>
+        </div>
+
+        <div class="player opponent">
           <div class="left arm"></div>
           <div class="body"></div>
           <div class="right arm"></div>
