implement most of the animations

--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
   <body>
     <main>
       <div id="one" class="screen">
-        <div class="player">
+        <div class="player one">
           <div class="left arm"></div>
           <div class="body"></div>
           <div class="right arm"></div>
         </div>
 
-        <div class="player opponent">
+        <div class="player two opponent">
           <div class="left arm"></div>
           <div class="body"></div>
           <div class="right arm"></div>
         </div>
       </div>
       <div id="two" class="screen">
-        <div class="player">
+        <div class="player two">
           <div class="left arm"></div>
           <div class="body"></div>
           <div class="right arm"></div>
         </div>
 
-        <div class="player opponent">
+        <div class="player one opponent">
           <div class="left arm"></div>
           <div class="body"></div>
           <div class="right arm"></div>
