add health bar, knockout anim, takeDamage fn

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <main>
       <div id="one" class="screen">
+        <div class="healthbar" style="width: 75vh"></div>
         <div class="player one">
           <div class="left arm"></div>
           <div class="body"></div>
@@ -21,6 +22,7 @@
         </div>
       </div>
       <div id="two" class="screen">
+        <div class="healthbar" style="width: 75vh"></div>
         <div class="player two">
           <div class="left arm"></div>
           <div class="body"></div>
