style the screen divider

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div class="right arm"></div>
         </div>
       </div>
+      <div id="divider"></div>
       <div id="two" class="screen">
         <div class="healthbar" style="width: 75vh"></div>
         <div class="player two">
